try fix gradients with transparent colors on IE9 :sob:

--- a/source/stylesheets/partials/_banner-colors.sass
+++ b/source/stylesheets/partials/_banner-colors.sass
@@ -37,6 +37,7 @@
       .black
         background-color: transparent
         +background(linear-gradient(transparent, black))
+        filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0, startColorstr=#000000FF, endColorstr=#000000)
 
       .button
         &--download
