--- a/source/stylesheets/partials/_home-notice.sass
+++ b/source/stylesheets/partials/_home-notice.sass
@@ -68,7 +68,7 @@
 
     .atualiza-enem
       +background(linear-gradient(transparent, black))
-      filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=transparent, endColorstr=black)
+      filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0, startColorstr=#000000FF, endColorstr=#000000)
       height: 59%
       padding-top: 91px
 
